--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* You can add global styles to this file, and also import other style files */
+
+@import 'https://use.fontawesome.com/releases/v5.5.0/css/all.css';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+  width: 100%;
+  height: 100%;
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden;
+}
+
+.displayTable {
+  display: table;
+  width: 100%;
+  height: 100%;
+  background: #3F51B5;
+  background-image: url(./assets/img.jpg);
+  background-size: cover;
+}
+
+.displayTableCell {
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  height: 100%;
+}
